--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "tst_2fa_build_1_25666",
-  "displayName": "tst_2fa_build_1_25666"
+  "name": "tst_2fa_25666",
+  "displayName": "tst_2fa_25666"
 }
