--- a/ios/tst_2fa_build_1_25666/Info.plist
+++ b/ios/tst_2fa_build_1_25666/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>tst_2fa_build_1_25666</string>
+	<string>tst_2fa_25666</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
