--- a/ios/tst_2fa_build_1_25666.xcodeproj/xcshareddata/xcschemes/tst_2fa_build_1_25666.xcscheme
+++ b/ios/tst_2fa_build_1_25666.xcodeproj/xcshareddata/xcschemes/tst_2fa_build_1_25666.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "tst_2fa_build_1_25666.app"
-               BlueprintName = "tst_2fa_build_1_25666"
-               ReferencedContainer = "container:tst_2fa_build_1_25666.xcodeproj">
+               BuildableName = "tst_2fa_25666.app"
+               BlueprintName = "tst_2fa_25666"
+               ReferencedContainer = "container:tst_2fa_25666.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "tst_2fa_build_1_25666Tests.xctest"
-               BlueprintName = "tst_2fa_build_1_25666Tests"
-               ReferencedContainer = "container:tst_2fa_build_1_25666.xcodeproj">
+               BuildableName = "tst_2fa_25666Tests.xctest"
+               BlueprintName = "tst_2fa_25666Tests"
+               ReferencedContainer = "container:tst_2fa_25666.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "tst_2fa_build_1_25666.app"
-            BlueprintName = "tst_2fa_build_1_25666"
-            ReferencedContainer = "container:tst_2fa_build_1_25666.xcodeproj">
+            BuildableName = "tst_2fa_25666.app"
+            BlueprintName = "tst_2fa_25666"
+            ReferencedContainer = "container:tst_2fa_25666.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "tst_2fa_build_1_25666.app"
-            BlueprintName = "tst_2fa_build_1_25666"
-            ReferencedContainer = "container:tst_2fa_build_1_25666.xcodeproj">
+            BuildableName = "tst_2fa_25666.app"
+            BlueprintName = "tst_2fa_25666"
+            ReferencedContainer = "container:tst_2fa_25666.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
