--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,3 @@
-rootProject.name = 'tst_2fa_25666'
+rootProject.name = 'tst-2fa-25666'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
